# nixops-with-plugins

./: README.md  default.nix  flake.nix  nixops-pluggable.nix  overrides.nix  pyproject.toml  shell.nix  withplug.nix
nix/: sources.json
