[tool.poetry]
name = "nixops-with-plugins"
version = "0.1.0"
description = ""
authors = ["adisbladis <adisbladis@gmail.com>", "typetetris <ericwolf42@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
nixops-hetznercloud = {git = "https://github.com/lukebfox/nixops-hetznercloud", branch = "master"} 

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
